--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <nav class="site-header-nav">
         <ul class="list-none site-header-list">
           <li class="sitenav-list-item"><a class="sitenav-link active" href="index.html">Bosh sahifa</a></li>
-          <li class="sitenav-list-item"><a class="sitenav-link" href="#">Kitoblar</a></li>
-          <li class="sitenav-list-item"><a class="sitenav-link" href="#">Aksiyalar</a></li>
-          <li class="sitenav-list-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
+          <li class="sitenav-list-item"><a class="sitenav-link" href="#books">Kitoblar</a></li>
+          <li class="sitenav-list-item"><a class="sitenav-link" href="#aksiyaku">Aksiyalar</a></li>
+          <li class="sitenav-list-item"><a class="sitenav-link" href="#kontaktlarku">Kontaktlar</a></li>
         </ul>
         <a href="#" class="main-link">Ro’yxatdan o’tish</a>
       </nav>
@@ -31,7 +31,7 @@
   <!-- Saytning asosiy qismi -->
   <main>
     <!-- Hero Section -->
-    <section class="hero-section">
+    <section class="hero-section" id="aksiyaku">
       <div class="hero-container container">
         <div class="hero-content">
           <hr class="orange-line hero-line">
@@ -49,7 +49,7 @@
     </section>
 
     <!-- Features section -->
-    <section class="feature-section">
+    <section class="feature-section" id="books"> 
       <div class="container">
         <hr class="orange-line feature-line">
         <h2 class="feature-title">Nega aynan <br>Akademnashr?</h2>
@@ -100,7 +100,7 @@
   </main>
 
   <!-- Saytni podvali -->
-  <footer class="site-footer">
+  <footer class="site-footer" id="kontaktlarku">
     <div class="container">
       <div class="footer-top">
         <a href="index.html" class="site-logo">
